fix: overflow fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,7 @@ body {
   hyphens: auto;
   display: grid;
   grid-template-rows: min-content 1fr;
+  overflow: hidden; // to hide dialogs
 
   @media (prefers-color-scheme: light) {
     @include light-theme;
